--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:id="@+id/wel_des"
             android:layout_height="wrap_content"
-            android:text="@string/wel_des" />
+            android:text="@string/welcome_description" />
     </LinearLayout>
 
 </LinearLayout>
